--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "bcrypt": "^5.1.1",
+    "framer-motion": "^10.16.4",
+    "mongodb": "^6.0.0",
+    "mongoose": "^7.5.0",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-card-flip": "^1.2.2",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-icons": "^4.10.1",
+    "swiper": "^10.2.0",
+    "tailwindcss": "3.3.3",
+    "typewriter-effect": "^2.20.1"
   }
 }
