--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "framer-motion": "^10.16.4",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
-    "next": "13.4.19",
+    "next": "^13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
